# vrp

./: .gitignore  CMakeLists.txt  main  main.cpp  readme.md  run.sh
.github/workflows/: ci.yml
include/: Dijkstra.h  Params.h  VrpSolver.h  Vrp_Solver.h  function.h  greedy_solver.h
src/: Params.cpp  VrpSolver.cpp  Vrp_Solver.cpp  function.cpp
tests/: Dijkstra_test.cpp  greedy_test.cpp  solver_test.cpp  unitTest.cpp
